# ai-hedge-fund-altdata

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
.claude/: settings.local.json
dashboard/: .gitignore  README.md
dashboard/backend/: pyproject.toml
dashboard/backend/app/: auth.py  budget.py  cache.py  config.py  main.py
dashboard/backend/app/db/: schema.sql  store.py
dashboard/backend/app/routes/: auto_push.py  explain_event.py  history.py  meta.py  query.py  trace.py
dashboard/backend/app/runner/: __init__.py  event_explanations.py  executor.py  intent_adapter.py  session.py
dashboard/backend/tests/: conftest.py  test_archive_migration.py  test_ark_cron_integration.py  test_auto_push.py  test_budget.py  test_cache.py  test_earnings_cards.py  test_earnings_cron_integration.py  test_endpoints.py  test_event_explanations.py  test_explain_event_llm.py  test_intent_classify.py  test_macro_cron_integration.py  test_phase3_5_cron.py  test_portfolio_cron_integration.py  test_positions_snapshot_cron.py  test_priority.py  test_sec_cron_integration.py
scripts/: _phase1_final_check.py  _phase2_5_full_final_check.py  _phase2_final_check.py  _phase3_5_final_check.py  _phase3_final_check.py  _phase4_5_mini_final_check.py  _phase4_final_check.py  _phase5a_final_check.py  anomaly_to_telegram.py  ark_alerts_to_telegram.py  backfill_13f.py  daily_screen_to_telegram.py  diagnose_edgar.py  diagnose_fd.py  dump_universe_metrics.py  earnings_reminders.py  earnings_summaries.py  etf_daily_snapshot.py  find_chat_id.py  institutional_to_telegram.py  lateral_to_telegram.py  macro_claims_to_telegram.py  macro_daily_snapshot.py  macro_release_to_telegram.py  macro_weekly_to_telegram.py  p2_digest_to_telegram.py  pead_to_telegram.py  portfolio_risk_to_telegram.py  portfolio_snapshot.py  portfolio_weekly_to_telegram.py  query_archive.py  run_scheduler.py  run_streamer.py  run_telegram_bot.py  sec_8k_to_telegram.py  sec_form4_to_telegram.py  sec_insider_digest_to_telegram.py  verify_telegram.py
(+170 files in other folders)
