[tool.poetry]
name = "ai-hedge-fund-altdata"
version = "2026.5.29"
description = "Alternative-data agent system delivered through Telegram. 3 services, 6 cron agents, 15 NL intents, 5 hallucination-defense mechanisms."
authors = ["Yuhan Wang <wyuhan2321@gmail.com>"]
readme = "README.md"
packages = [
    { include = "v2", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
# LLM orchestration
langchain = "^0.3.7"
langchain-openai = "^0.3.5"
langchain-deepseek = "^0.1.2"
# Core
pandas = "^2.1.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
pydantic = "^2.4.2"
python-dotenv = "1.0.0"
matplotlib = "^3.9.2"
# External APIs
python-telegram-bot = "^21.0"
tavily-python = "^0.5"
yfinance = "^0.2"
edgartools = "^5.31.5"
alpaca-py = "^0.43.4"
fredapi = "^0.5.2"
# Infrastructure
apscheduler = "^3.10"
tzdata = "^2026.2"
chromadb = "^1.5.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 420
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true